First angular print

--- a/angular_sample.html
+++ b/angular_sample.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="store">
 <head>
  <title>Angular Sample page</title>
+ <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.1/angular.min.js"></script>
+<script type="text/javascript">
+    var app = angular.module('store',[]);
+    
+</script>
 </head>
 <body>
+    <p> I am {{4 + 6}}
 </body>
 </html>
