--- a/angular_sample.html
+++ b/angular_sample.html
@@ -6,7 +6,7 @@
 <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.1/angular.min.js"></script>
 <script type="text/javascript">
-   ( 
+   (function() { 
      var gem = {
          name:'Dodecahedron',
          price:2.95,
@@ -21,7 +21,7 @@
              
             );
             
-            );
+    })();
 </script>
 </head>
 <body>
