--- a/angular_sample.html
+++ b/angular_sample.html
@@ -16,7 +16,7 @@
      var app = angular.module('store',[]);
      app.controller('StoreController',function() {
          this.product = gem;
-         
+         alert("TEST");
      }
              
             );
