Added SVG clock examples

--- a/index.html
+++ b/index.html
@@ -5,5 +5,8 @@
 </head>
 <body>
 <a href="angular_sample.html">Angular Sample</a>
+<a href="clock.html">SVG Clock</a>
+<a href="clock_text.html">Text Clock</a>
+<a href="clock_text_full.html">Clock Text Full</a>
 </body>
 </html>
