Updated index Merge branch 'master' of home.etechtips.com:ecdown/web_examples
Conflicts:
	index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 <a href="angular_sample.html">Angular Sample</a>
 <a href="rounded_corners.html">Rounded Corners Sample</a>
 <a href="books3.php">Book List</a>
+<a href="clock.html">SVG Clock</a>
+<a href="clock_text.html">Text Clock</a>
+<a href="clock_text_full.html">Clock Text Full</a>
 </body>
 </html>
