Corrected break in twenty

--- a/clock_text.html
+++ b/clock_text.html
@@ -181,6 +181,7 @@
                         break;
                     case 20:
                         ctens = "twenty";
+                        break;
                     case 30:
                         ctens = "thirty";
                         break;
