added images directory to deploy.sh added infosite.html with navigation example updated infex.html with link

--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
  <title>Master page</title>
 </head>
 <body>
-<a href="angular_sample.html">Angular Sample</a>
-<a href="rounded_corners.html">Rounded Corners Sample</a>
-<a href="books3.php">Book List</a>
-<a href="clock.html">SVG Clock</a>
-<a href="clock_text.html">Text Clock</a>
-<a href="clock_text_full.html">Clock Text Full</a>
+<ul>
+<li><a href="angular_sample.html">Angular Sample</a></ul>
+<li><a href="rounded_corners.html">Rounded Corners Sample</a></ul>
+<li><a href="books3.php">Book List</a></ul>
+<li><a href="clock.html">SVG Clock</a></ul>
+<li><a href="clock_text.html">Text Clock</a></ul>
+<li><a href="clock_text_full.html">Clock Text Full</a></ul>
+<li><a href="infosite.html">Infosite Navigation</a></ul>
+</ul>
 </body>
 </html>
