Added base files of responsive-menu

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <li><a href="clock_text.html">Text Clock</a></ul>
 <li><a href="clock_text_full.html">Clock Text Full</a></ul>
 <li><a href="infosite.html">Infosite Navigation</a></ul>
+<li><a href="responsive_menu.html">Responsive Menu</a></ul>
 </ul>
 </body>
 </html>
