Missing script tag open

--- a/responsive_menu.html
+++ b/responsive_menu.html
@@ -18,6 +18,7 @@
         <li><a href="#">Blog</a></li>
       </ul>
     </div>
+    <script>
       var navigation = responsiveNav("#nav", {
         animate: true,        // Boolean: Use CSS3 transitions, true or false
         transition: 400,      // Integer: Speed of the transition, in milliseconds
